if ( BUILD_ALL OR BUILD_MICROBMS )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/vertex_storage_benchmark_app )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/edge_storage_benchmark_app )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/compress_csr_benchmark_app )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/compress_adjList_benchmark_app )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/bfs_benchmark_app )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/page_rank_benchmark_app )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/bfs_csr_partial_compression_benchmark_app )
    FILE( REMOVE ${CMAKE_BINARY_DIR}/src/microbenchmarks/graph/page_rank_csr_partial_compression_benchmark_app )
    
    add_executable( vertex_storage_benchmark_app vertex_storage_benchmark.cpp)
    add_executable( edge_storage_benchmark_app edge_storage_benchmark.cpp)
    add_executable( compress_csr_benchmark_app csr_graph_compression_benchmark.cpp)
    add_executable( compress_adjList_benchmark_app adjList_graph_compression_benchmark.cpp)
    add_executable( bfs_benchmark_app bfs_benchmark.cpp)
    add_executable( page_rank_benchmark_app page_rank_benchmark.cpp)
    add_executable( bfs_csr_partial_compression_benchmark_app bfs_csr_partial_compression_benchmark.cpp)
    add_executable( page_rank_csr_partial_compression_benchmark_app page_rank_csr_partial_compression_benchmark.cpp)
    
    target_link_libraries(compress_csr_benchmark_app PRIVATE "-ldl" stdc++fs)
    target_link_libraries(compress_adjList_benchmark_app PRIVATE "-ldl" stdc++fs)
    target_link_libraries(bfs_benchmark_app PRIVATE "-ldl" stdc++fs)
    target_link_libraries(page_rank_benchmark_app PRIVATE "-ldl" stdc++fs)
    target_link_libraries(bfs_csr_partial_compression_benchmark_app PRIVATE "-ldl" stdc++fs)
    target_link_libraries(page_rank_csr_partial_compression_benchmark_app PRIVATE "-ldl" stdc++fs)
endif()